Added PCA for 2nd layer and other changes

--- a/Weight_sharing.ipynb
+++ b/Weight_sharing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -33,74 +33,222 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gaussian_0.17_True_WS_both\n",
-      "0.42148004710674286\n",
-      "0.3281837604939938\n",
-      "1.7014242994264352e-05\n",
-      "6.690796407582411e-08\n",
-      "4.167619019335156e-10\n",
-      "2.97925095288365e-10\n",
-      "2.721647782144565e-10\n",
-      "2.6223451715656763e-10\n",
-      "2.540351937141416e-10\n",
-      "2.488256466148808e-10\n",
-      "gaussian_0.17_True_FC_both\n",
-      "0.4123788395524025\n",
-      "0.3549103298783302\n",
-      "0.3452237577736378\n",
-      "0.3391532039642334\n",
-      "0.33624408215284346\n",
-      "0.3305837436020374\n",
-      "0.3280174106359482\n",
-      "0.327526018768549\n",
-      "0.3273317790031433\n",
-      "0.3271929903328419\n",
-      "gaussian_0.17_False_WS_both\n",
-      "0.22410224184393882\n",
-      "0.18540651693940163\n",
-      "0.18341006204485893\n",
-      "0.18230271443724633\n",
-      "0.17539615511894227\n",
-      "0.13747728399932385\n",
-      "0.08129966910928488\n",
-      "0.0770899574458599\n",
-      "0.074758530408144\n",
-      "0.07256363932043314\n",
-      "gaussian_0.17_False_FC_both\n",
-      "0.22664331659674644\n",
-      "0.18414172023534775\n",
-      "0.18247580617666245\n",
-      "0.18112347140908241\n",
-      "0.179974644780159\n",
-      "0.17895037576556205\n",
-      "0.17784477144479752\n",
-      "0.17660040080547332\n",
-      "0.17562164679169656\n",
-      "0.17474402815103532\n",
-      "mnist_0.17_False_WS_both\n",
+      "mnist_1_True_WS_low\n",
       "(60000, 28, 28, 1)\n",
-      "0.46105061650276186\n",
-      "0.25234878197312355\n",
-      "0.23696741953492165\n",
-      "0.23276169329881669\n",
-      "0.22894748136401177\n",
-      "0.2260439032316208\n",
-      "0.22655229672789573\n",
-      "0.22369552433490753\n",
-      "0.22136013478040695\n",
-      "0.21999993801116943\n",
-      "mnist_0.17_False_FC_both\n",
+      "3.699142301082611\n",
+      "0.0031847873100196013\n",
+      "0.0027107645354408306\n",
+      "0.0024390870725619607\n",
+      "0.0022506786648591516\n",
+      "0.0021673106604430357\n",
+      "0.0021098663351585855\n",
+      "0.0020653090298947065\n",
+      "0.002028925987469847\n",
+      "0.001997851204396284\n",
+      "mnist_1_True_FC_low\n",
       "(60000, 28, 28, 1)\n",
-      "0.2832179109752178\n",
-      "0.17484316624701024\n",
-      "0.1514604727178812\n",
-      "0.14578478418290616\n",
-      "0.1425955468416214\n",
-      "0.14040150590240955\n",
-      "0.13923630453646182\n",
-      "0.13768852569162846\n",
-      "0.1362860705703497\n",
-      "0.13613370560109617\n"
+      "5.556259651184082\n",
+      "0.0014421153016155586\n",
+      "0.0010571762096515157\n",
+      "0.0008651872169866692\n",
+      "0.0007439504064859647\n",
+      "0.000658313318326691\n",
+      "0.0005937575200732681\n",
+      "0.0005427670165136079\n",
+      "0.0005010591561585897\n",
+      "0.00046596266813139667\n",
+      "mnist_1_True_WS_high\n",
+      "(60000, 28, 28, 1)\n",
+      "0.377974628508091\n",
+      "0.3694880048930645\n",
+      "0.36901486173272136\n",
+      "0.3689154113829136\n",
+      "0.3687864059209824\n",
+      "0.36865822583436963\n",
+      "0.36880750000476836\n",
+      "0.368718408793211\n",
+      "0.36878087669610976\n",
+      "0.36883407443761823\n",
+      "mnist_1_True_FC_high\n",
+      "(60000, 28, 28, 1)\n",
+      "0.38243485033512115\n",
+      "0.3625610803067684\n",
+      "0.36424771666526795\n",
+      "0.36280304461717605\n",
+      "0.36442808479070665\n",
+      "0.36352569684386254\n",
+      "0.3601209965348244\n",
+      "0.361993268430233\n",
+      "0.3555531783401966\n",
+      "0.3549035450816154\n",
+      "mnist_0.1_True_WS_both\n",
+      "(60000, 28, 28, 1)\n",
+      "0.6085373476147652\n",
+      "0.5632259133458137\n",
+      "0.5567176395654678\n",
+      "0.5551792034506797\n",
+      "0.5548565077781678\n",
+      "0.554260010421276\n",
+      "0.553940050303936\n",
+      "0.5537712714076042\n",
+      "0.5541947677731514\n",
+      "0.5534010076522827\n",
+      "mnist_0.1_True_FC_both\n",
+      "(60000, 28, 28, 1)\n",
+      "0.37850051462650297\n",
+      "0.3331597700715065\n",
+      "0.33099471151828763\n",
+      "0.3144442664086819\n",
+      "0.33100723668932913\n",
+      "0.3352699409425259\n",
+      "0.3309248039126396\n",
+      "0.31696356847882273\n",
+      "0.3354848054051399\n",
+      "0.3400225096940994\n",
+      "mnist_0.17_True_WS_both\n",
+      "(60000, 28, 28, 1)\n",
+      "0.801401561498642\n",
+      "0.7874838507175446\n",
+      "0.786616917848587\n",
+      "0.7869515979290008\n",
+      "0.7866969966888427\n",
+      "0.7867852926254273\n",
+      "0.7867174613475799\n",
+      "0.7866167098283767\n",
+      "0.7867070704698562\n",
+      "0.7866000670194626\n",
+      "mnist_0.17_True_FC_both\n",
+      "(60000, 28, 28, 1)\n",
+      "0.3650248473882675\n",
+      "0.3246100814640522\n",
+      "0.33058893188834193\n",
+      "0.3213566440343857\n",
+      "0.320896357446909\n",
+      "0.3187773160636425\n",
+      "0.32281376644968984\n",
+      "0.31877629205584523\n",
+      "0.324483331143856\n",
+      "0.32530554220080377\n",
+      "mnist_0.25_True_WS_both\n",
+      "(60000, 28, 28, 1)\n",
+      "1.218773045539856\n",
+      "1.2034482961893083\n",
+      "1.2030251359939574\n",
+      "1.202885913848877\n",
+      "1.2029847633838653\n",
+      "1.2026667839288712\n",
+      "1.2029222613573074\n",
+      "1.2021812683343887\n",
+      "1.2028640282154084\n",
+      "1.2020371800661087\n",
+      "mnist_0.25_True_FC_both\n",
+      "(60000, 28, 28, 1)\n",
+      "0.8362512570619584\n",
+      "0.25513075083494186\n",
+      "0.2540363635122776\n",
+      "0.22423921942710875\n",
+      "0.22368626043200493\n",
+      "0.22324570015072823\n",
+      "0.22308789193630219\n",
+      "0.22303131669759751\n",
+      "0.2227481435239315\n",
+      "0.22299106419086456\n",
+      "mnist_0.5_True_WS_both\n",
+      "(60000, 28, 28, 1)\n",
+      "2.16137500166893\n",
+      "0.7245179697871208\n",
+      "0.4842673474550247\n",
+      "0.48507183730602266\n",
+      "0.48437709242105487\n",
+      "0.4934185352921486\n",
+      "0.49302448362112045\n",
+      "0.4927809426188469\n",
+      "0.49043898671865466\n",
+      "0.4917770618200302\n",
+      "mnist_0.5_True_FC_both\n",
+      "(60000, 28, 28, 1)\n",
+      "1.1556966704130174\n",
+      "0.1697001326829195\n",
+      "0.16280739903450012\n",
+      "0.1621514844149351\n",
+      "0.16157531566917896\n",
+      "0.16301358357071877\n",
+      "0.16267970524728298\n",
+      "0.16152800887823104\n",
+      "0.16077511966228486\n",
+      "0.16483367525041104\n",
+      "mnist_1_True_WS_both\n",
+      "(60000, 28, 28, 1)\n",
+      "1.6967484492063523\n",
+      "0.21620754308998585\n",
+      "0.21462373331189155\n",
+      "0.21427376970648765\n",
+      "0.21399166330695152\n",
+      "0.21449203711003065\n",
+      "0.21447085089981555\n",
+      "0.21425801150500776\n",
+      "0.21389861136674881\n",
+      "0.0012870044623559806\n",
+      "mnist_1_True_FC_both\n",
+      "(60000, 28, 28, 1)\n",
+      "0.9177746486663818\n",
+      "0.12954385932534934\n",
+      "0.09057768248021603\n",
+      "0.08705797221511602\n",
+      "0.0860241499170661\n",
+      "0.08875885128974914\n",
+      "0.08682997658848762\n",
+      "0.0866817196086049\n",
+      "0.08764951728284359\n",
+      "0.08708656135946512\n",
+      "mnist_2_True_WS_both\n",
+      "(60000, 28, 28, 1)\n",
+      "1.9555649912357331\n",
+      "0.003524345179903321\n",
+      "0.0018444273818749935\n",
+      "0.000763007277273573\n",
+      "0.0006348948345112149\n",
+      "0.0005869710968181607\n",
+      "0.0005546979708742583\n",
+      "0.0005304132770106662\n",
+      "0.0005101531731634168\n",
+      "0.0004924533254961716\n",
+      "mnist_2_True_FC_both\n",
+      "(60000, 28, 28, 1)\n",
+      "1.8182216894626617\n",
+      "0.04049488857388497\n",
+      "0.04036007611081004\n",
+      "0.04030504286289215\n",
+      "0.04019477805122733\n",
+      "0.040162275079637766\n",
+      "0.04014290953055024\n",
+      "0.04009086290374398\n",
+      "0.04004490103572607\n",
+      "0.04031847644597292\n",
+      "mnist_5_True_WS_both\n",
+      "(60000, 28, 28, 1)\n",
+      "3.4437679016590117\n",
+      "1.2895828413963317\n",
+      "0.0012713098048698157\n",
+      "0.0007649834192852722\n",
+      "0.0004789082523529942\n",
+      "0.0003893132824487111\n",
+      "0.00030908175682270667\n",
+      "0.00024417841591457546\n",
+      "0.00020223485374799567\n",
+      "0.00017709521620417945\n",
+      "mnist_5_True_FC_both\n",
+      "(60000, 28, 28, 1)\n",
+      "7.750442409515381\n",
+      "0.011007903050631285\n",
+      "0.010655129584483803\n",
+      "0.010501915658824145\n",
+      "0.010393127012066542\n",
+      "0.010333564188331366\n",
+      "0.010294302776455879\n",
+      "0.01026639059651643\n",
+      "0.010239015044644474\n",
+      "0.010216604275628925\n"
      ]
     }
    ],
@@ -177,20 +325,21 @@
     "            x = self.layer_list[1](x)\n",
     "            return x[:,0]\n",
     "\n",
-    "for d_set in [\"gaussian\", \"mnist\"] :\n",
+    "#for d_set in [\"gaussian\", \"mnist\"] :\n",
+    "for d_set in [\"mnist\"] :\n",
     "\n",
     "  if(d_set == \"gaussian\") :\n",
     "    temp = [True, False]\n",
     "  else :\n",
-    "    temp =[False]\n",
+    "#    temp =[True, False]\n",
+    "    temp = [True]\n",
     "\n",
     "  for g_known in temp :\n",
     "\n",
-    "    #for g_star in [\"low\", \"high\", \"both\"] :\n",
-    "    for g_star in [ \"both\"] :\n",
+    "    for g_star in [\"low\", \"high\", \"both\"] :\n",
     "        \n",
     "      if (g_star == \"both\") :\n",
-    "        temp2= [ 0.17]\n",
+    "        temp2= [ 0.1, 0.17, 0.25, 0.5, 1, 2, 5]\n",
     "      else :\n",
     "        temp2 = [1]\n",
     "\n",
